# lytter

./: .djlintrc  .dockerignore  .env.example  .gitignore  .mise.development.toml  .mise.toml  .prettierrc.toml  .taplo.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.fastapi  README.fastapi.md  README.md  background_updater.py  cliff.toml  compose.yml  cron_updater.py  db_status.py  docker-compose.fastapi.yml  fnox.toml  gap_checker.py  hk.pkl  nginx.conf  pitchfork.toml  pyproject.toml  requirements.txt  rxconfig.py  simple_app.py  update_db.py
.github/: renovate.json
.github/workflows/: publish.yml  release-calver.yml  release.yml  update.yml
deployment/: crontab.example  systemd.example
docs/superpowers/plans/: 2026-05-16-enhanced-bump-chart.md  2026-05-24-front-page-redesign.md  2026-05-30-name-normalization.md
docs/superpowers/specs/: 2026-05-16-enhanced-bump-chart-design.md  2026-05-24-front-page-redesign.md  2026-05-30-name-normalization-design.md
lastfm_stats/: __init__.py  config.py  lastfm_stats.py  styles.py
lastfm_stats/components/: sidebar.py
lastfm_stats/pages/: __init__.py  dashboard.py  index.py  now_playing.py  recently.py  settings.py
lastfm_stats/templates/: template.py
lastfm_stats/tools/: __init__.py  download_scrobbles.py  get_lyrics.py  lastplayed.py  mylast.py  stats_lookup.py
leaflet/: lastfm-artists-map.html  lastfm-dataset.js
src/lytter/: __init__.py  app.py  background_updater.py  cron_updater.py  db_status.py  duration_updater.py  gap_checker.py  meta_updater.py  update_db.py
src/lytter/static/: styles.css
src/lytter/templates/: _duration_artists_length.html  _duration_song_lengths.html  _duration_top_items.html  _genre_list.html  _recent_favorites.html  _recent_plays.html  _top_albums_list.html  _top_artists_list.html  _top_songs_list.html  _yearly_top_items.html  album.html  alltime.html  artist.html  artist_stats.html  base.html  compare.html  discovery.html  duration_stats.html  genre.html  genre_stats.html  index.html  macros.html  song.html  stats.html  yearly.html
templates/: artist.html  base.html  index.html
tests/: __init__.py  conftest.py  test_endpoints.py  test_helpers.py  test_normalize.py
