[project]
authors         = [{ name = "Eirik Rolland Enger", email = "engeir@pm.me" }]
description     = "Last.fm statistics application"
license         = "MIT"
name            = "lytter"
readme          = "README.md"
requires-python = ">=3.12"
version         = "2025.11.5"

dependencies = [
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",
  "jinja2>=3.1.2",
  "python-multipart>=0.0.6",
  "aiofiles>=23.2.1",
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "pylast>=5.2.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "apscheduler>=3.10.4",
  "rapidfuzz>=3.0.0",
]

[build-system]
build-backend = "uv_build"
requires      = ["uv_build>=0.9.8,<0.10.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/lytter"]

[project.scripts]
lytter            = "lytter.app:main"
lytter-background = "lytter.background_updater:main"
lytter-cron       = "lytter.cron_updater:main"
lytter-gaps       = "lytter.gap_checker:main"
lytter-status     = "lytter.db_status:main"
lytter-update     = "lytter.update_db:main"

[dependency-groups]
dev = [
  "types-requests>=2.32.0.20240914",
  "mypy>=1.8.0",
  "pydoclint>=0.4.1",
  "pydocstringformatter>=0.7.3",
  "pytest>=8.0.1",
  "ruff>=0.2.2",
  "types-decorator>=5.1.8.20240106",
  "types-pytz>=2024.1.0.20240203",
  "types-requests>=2.31.0.20240218",
  "types-six>=1.16.21.20240106",
  "xdoctest>=1.1.3",
  "icecream>=2.1.3",
]

[tool.mypy]
allow_redefinition     = false
check_untyped_defs     = true
files                  = ["src", "tests"]
ignore_errors          = false
ignore_missing_imports = true
implicit_reexport      = false
local_partial_types    = true
no_implicit_optional   = true
strict_equality        = true
strict_optional        = true
warn_no_return         = true
warn_redundant_casts   = true
warn_unreachable       = true
warn_unused_configs    = true
warn_unused_ignores    = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
per-file-ignores = { "src/lytter/app.py" = ["PLR0912", "PLR0915"] }
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

select = [ # https://docs.astral.sh/ruff/rules/
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "PL", # pylint
  "Q",  # flake8-quotes
  "UP", # pyupgrade
]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# select = ["E4", "E7", "E9", "F"]  # These are the default
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
  # "COM812", # Since we don't select COM, this is already ignored
  # "COM819", # Since we don't select COM, this is already ignored
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "E266",
  "E501",
  # "ISC001", # Since we don't select ISC, this is already ignored
  # "ISC002", # Since we don't select ISC, this is already ignored
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  # "W191",  # Since we don't select W, this is already ignored
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable   = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention        = "numpy"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-import-conventions]
[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
"matplotlib.pyplot" = "plt"
numpy               = "np"
scipy               = "sp"
xarray              = "xr"

[tool.ruff.lint.isort]
case-sensitive = true
order-by-type  = true

[tool.lint.isort]
combine_as_imports     = true
force_grid_wrap        = 0
include_trailing_comma = true
line_length            = 88
multi_line_output      = 3
profile                = "black"
use_parentheses        = true

[tool.pydocstringformatter]
numpydoc-section-hyphen-length = true
split-summary-body             = true
strip-whitespaces              = true
style                          = ["pep257", "numpydoc"]
write                          = true
